Limit /latest by default (for speed/sensibility) and also fix cell wrapping.

--- a/app/static/css/screen-dark.css
+++ b/app/static/css/screen-dark.css
@@ -589,6 +589,8 @@ th {
     border: 1px solid var(--border);
     text-align: left;
     padding: .5rem;
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 th {
